objects/Expected_ISA_Date__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field__c</fullName>
        <label>Base Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detailed Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offset_Days__c</fullName>
        <label>Offset Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Today__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Today</label>
        <type>Checkbox</type>
    </fields>
    <label>Expected ISA Date</label>
</CustomObject>